--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <h1BARBA, CABELO E BIGODE: CONSUMO E MASCULINIDADES EM BARBEARIAS</h1>
+ <h1>BARBA, CABELO E BIGODE: CONSUMO E MASCULINIDADES EM BARBEARIAS</h1>
 
   <p>Os homens vêm questionando estereótipos de gênero que instituíam o que deveriam ou não consumir. Um exemplo disso é o crescimento do mercado de serviços 
   para esse público, como as novas barbearias.</p>
