--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE hetml>
+<hetml lang="pt-br">
+  <head>
+    <meta charset="UTf-8">
+    <title>Barba,Cabelo e BIGODE</title>
+  </head>
+  <body>
+    <h1 style="text-align: center;">BARBA, CABELO E BIGODE: CONSUMO E MASCULINIDADES EM BARBEARIAS</h1>
 
-<h1>BARBA, CABELO E BIGODE: CONSUMO E MASCULINIDADES EM BARBEARIAS</h1>
-
-  <p>Os homens vêm questionando estereótipos de gênero que instituíam o que deveriam ou não consumir. Um exemplo disso é o crescimento do mercado de serviços 
-  para esse público, como as novas barbearias.</p>
-   <p>Assim,deste trabalho é de que modo as identidades masculinas são construídas, administradas e negociadas em espaços de 
+     <p style="text-align: center;>Os homens vêm questionando estereótipos de gênero que instituíam o que deveriam ou não consumir. Um exemplo disso é o crescimento do mercado de serviços 
+      para esse público, como as novas barbearias.</p>
+     <p>Assim,deste trabalho é de que modo as identidades masculinas são construídas, administradas e negociadas em espaços de 
     Como métodos, foram realizadas observação participante em <strong>barbearias</strong> e 17 entrevistas com consumidores e prestadores de serviços. </p>
-   Os <strong>sugerem que os significados simbólicos sobre o que é ser masculino emergem em um processo dialético entre os clientes,</strong>. prestadores de
-    <p><em>serviços e os espaços das barbearias, sendo utilizados ativamente para a construção e negociação de suas masculinidades.</em></p>
+     <p style="text-align: center;>Os <strong>sugerem que os significados simbólicos sobre o que é ser masculino emergem em um processo dialético entre os clientes,</strong>. prestadores de
+     <p style="text-align: center; style="font-size: 20px; text-align: center"><em>serviços e os espaços das barbearias, sendo utilizados ativamente para a construção e negociação de suas masculinidades.</em></p>
    Esse processo acontece de três formas: i) distinção do universo feminino; ii) espaço de relaxamento e bem-estar, e iii) espaço de sociabilidade entre homens. 
    O estudo é concluído apresentando as implicações acadêmicas e gerenciais.</p>
+
+  </body>
+
+  
+
+
+  
 
 
 
